# adventofcode

./: .gitignore  Cargo.toml
2023/: Cargo.toml
2023/day-01/src/: main.rs
2023/day-02/src/: draw.rs  game.rs  main.rs
2023/day-03/: Cargo.toml
2023/day-03/src/: input.rs  main.rs  parser.rs
2023/day-04/src/: input.rs  main.rs
2023/day-05/src/: input.rs  main.rs
2023/day-06/src/: input.rs  main.rs  race.rs
2023/day-07/src/: card.rs  card_count.rs  cards.rs  hand.rs  hand_type.rs  input.rs  main.rs
2023/day-08/: example-4.txt
2023/day-08/src/: input.rs  main.rs
2023/day-09/src/: input.rs  main.rs
2023/day-10/src/: main.rs
2024/day-01/: Cargo.toml
2024/day-01/src/: main.rs
2024/day-02/src/: main.rs
2024/day-03/: Cargo.toml
2024/day-03/src/: main.rs
2024/day-04/: Cargo.toml
2024/day-04/src/: main.rs
2024/day-05/: Cargo.toml
2024/day-05/src/: main.rs
2024/day-06/: Cargo.toml
2024/day-06/src/: main.rs
2024/day-07/: Cargo.toml
2024/day-07/src/: main.rs
2024/day-08/: Cargo.toml
2024/day-08/src/: main.rs
2024/day-09/: Cargo.toml
2024/day-09/src/: main.rs
2024/day-10/src/: main.rs
2024/day-11/: Cargo.toml
2024/day-11/src/: main.rs
2024/day-12/src/: main.rs
2024/day-13/: Cargo.toml
2024/day-14/: Cargo.toml
2024/day-15/: Cargo.toml
2024/day-16/: Cargo.toml
2024/day-17/: Cargo.toml
2024/day-18/: Cargo.toml
2024/day-19/: Cargo.toml
2024/day-20/: Cargo.toml
2024/day-21/: Cargo.toml
2024/day-22/: Cargo.toml
2024/day-23/: Cargo.toml
2024/day-24/: Cargo.toml
2024/day-25/: Cargo.toml
(+12 files in other folders)
