[workspace]
resolver = "2"
members = ["2024/day-01", "2024/day-02", "2024/day-03", "2024/day-04", "2024/day-05", "2024/day-06", "2024/day-07", "2024/day-08", "2024/day-09", "2024/day-10", "2024/day-11", "2024/day-12", "2024/day-13", "2024/day-14", "2024/day-15", "2024/day-16", "2024/day-17", "2024/day-18", "2024/day-19", "2024/day-20", "2024/day-21", "2024/day-22", "2024/day-23", "2024/day-24", "2024/day-25"]
